tree_sitter_v/grammar.js
		source_file: ($) =>
			seq(
				optional($.shebang),
				optional($.module_clause),
				optional($.import_list),
				repeat(
					choice(
						seq($._top_level_declaration, optional(terminator)),
						seq($._statement, optional(terminator)),
					),
				),
			),

		_top_level_declaration: ($) =>
			choice(
				$.const_declaration,
				$.global_var_declaration,
				$.type_declaration,
				$.function_declaration,
				$.static_method_declaration,
				$.struct_declaration,
				$.enum_declaration,
				$.interface_declaration,
			),

		_expression: ($) => choice($._expression_without_blocks, $._expression_with_blocks),

		type_parameters: ($) =>
			prec.dynamic(2, seq(token.immediate('['), comma_sep1($.plain_type), ']')),

		type_initializer: ($) =>
			prec(
				PREC.type_initializer,
				seq(field('type', $.plain_type), field('body', $.type_initializer_body)),
			),

		type_initializer_body: ($) =>
			seq(
				'{',
				optional(
					choice(
						field('element_list', $.element_list),
						// For short struct init syntax
						field('short_element_list', $.short_element_list),
					),
				),
				'}',
			),

		element_list: ($) =>
			repeat1(
				seq(
					choice($.spread_expression, $.keyed_element, $.reference_expression),
					optional(list_separator),
				),
			),

		short_element_list: ($) =>
			repeat1(seq(alias($._expression, $.element), optional(list_separator))),

		keyed_element: ($) =>
			seq(
				field('key', alias($.reference_expression, $.field_name)),
				':',
				field('value', $._expression),
			),

		reference_expression: ($) => prec.left($.identifier),
		type_reference_expression: ($) => prec.left($.identifier),

		binary_expression: ($) => {
			const table = [
				[PREC.multiplicative, choice(...multiplicative_operators)],
				[PREC.additive, choice(...additive_operators)],
				[PREC.comparative, choice(...comparative_operators)],
				[PREC.and, '&&'],
				[PREC.or, '||'],
			];

			return choice(
				...table.map(([precedence, operator]) =>
					prec.left(
						Number(precedence),
						seq(
							field('left', $._expression),
							// @ts-ignore
							field('operator', operator),
							field('right', $._expression),
						),
					),
				),
			);
		},

		literal: ($) =>
			choice(
				$.int_literal,
				$.float_literal,
				$._string_literal,
				$.rune_literal,
				$.none,
				$.true,
				$.false,
				$.nil,
			),

		spread_expression: ($) => prec.right(PREC.unary, seq('...', $._expression)),

		map_init_expression: ($) =>
			prec(
				PREC.composite_literal,
				seq('{', repeat(seq($.map_keyed_element, optional(list_separator))), '}'),
			),

		map_keyed_element: ($) => seq(field('key', $._expression), ':', field('value', $._expression)),

		array_creation: ($) => prec.right(PREC.multiplicative, $._array),

		_array: ($) => seq('[', repeat(seq($._expression, optional(','))), ']'),

		index_expression: ($) =>
			prec.dynamic(
				-1,
				prec.right(
					PREC.primary,
					seq(
						field('operand', $._expression),
						choice('[', token.immediate('['), token('#[')),
						field('index', $._expression),
						']',
					),
				),
			),

		int_literal: () => token(int_literal),

		float_literal: () => token(float_literal),

		_string_literal: ($) =>
			choice($.interpreted_string_literal, $.c_string_literal, $.raw_string_literal),

		interpreted_string_literal: ($) =>
			prec(
				1,
				choice(
					seq(
						"'",
						repeat(
							choice(
								token.immediate(prec.right(1, /[^'\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						"'",
					),
					seq(
						'"',
						repeat(
							choice(
								token.immediate(prec.right(1, /[^"\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						'"',
					),
				),
			),

		identifier: () =>
			token(
				seq(
					optional('@'),
					optional('$'),
					optional('C.'),
					optional('JS.'),
					choice(unicode_letter, '_'),
					repeat(choice(letter, unicode_digit)),
				),
			),

		plain_type: ($) =>
			prec.right(
				PREC.primary,
				choice($._plain_type_without_special, $.option_type, $.result_type, $.multi_return_type),
			),

		_plain_type_without_special: ($) =>
			prec.right(
				PREC.primary,
				choice(
					$.type_reference_expression,
					$.qualified_type,
					$.pointer_type,
					$.wrong_pointer_type,
					$.array_type,
					$.fixed_array_type,
					$.function_type,
					$.generic_type,
					$.map_type,
					$.channel_type,
					$.shared_type,
					$.thread_type,
					$.atomic_type,
					$.anon_struct_type,
				),
			),

		qualified_type: ($) =>
			seq(field('module', $.reference_expression), '.', field('name', $.type_reference_expression)),

		array_type: ($) =>
			prec(PREC.primary, prec.dynamic(2, seq('[', ']', field('element', $.plain_type)))),

		pointer_type: ($) => prec(PREC.match_arm_type, seq('&', $.plain_type)),

		// In languages like Go, pointers use an asterisk, not an ampersand,
		// so this rule is needed to properly parse and then give an error to the user.
		map_type: ($) => seq('map[', field('key', $.plain_type), ']', field('value', $.plain_type)),

		channel_type: ($) => prec.right(PREC.primary, seq('chan', $.plain_type)),

		generic_type: ($) =>
			seq(choice($.qualified_type, $.type_reference_expression), $.type_parameters),

		_statement: ($) =>
			choice(
				$.simple_statement,
				$.assert_statement,
				$.continue_statement,
				$.break_statement,
				$.return_statement,
				$.asm_statement,
				$.goto_statement,
				$.labeled_statement,
				$.defer_statement,
				$.for_statement,
				$.compile_time_for_statement,
				$.send_statement,
				$.block,
				$.hash_statement,
				$.append_statement,
			),

		simple_statement: ($) =>
			choice(
				$.var_declaration,
				$._expression,
				$.assignment_statement,
				alias($.strictly_expression_list, $.expression_list),
			),
